--- a/petroleum/Gemfile
+++ b/petroleum/Gemfile
@@ -1,38 +1,20 @@
 source 'http://rubygems.org'
 
 gem 'rails', '3.1.1'
-
-# Bundle edge Rails instead:
-# gem 'rails',     :git => 'git://github.com/rails/rails.git'
-
-gem 'mysql2'
+gem 'sqlite3'
 gem 'formtastic'
+gem 'execjs'
+gem 'therubyracer'
+gem 'jquery-rails'
 
-
-group :development do
-	#gem 'annotate', :git => git://github.com/jeremyolliver/annotate_models.git', :branch => 'rake_compatibility'
-end
+# Gemfile in Rails >= 3.1
+gem 'activeadmin'
+gem 'sass-rails'
 
 
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
-  gem 'sass-rails',   '~> 3.1.4'
   gem 'coffee-rails', '~> 3.1.1'
   gem 'uglifier', '>= 1.0.3'
 end
-
-gem 'jquery-rails'
-
-# To use ActiveModel has_secure_password
-# gem 'bcrypt-ruby', '~> 3.0.0'
-
-# Use unicorn as the web server
-# gem 'unicorn'
-
-# Deploy with Capistrano
-# gem 'capistrano'
-
-# To use debugger
-# gem 'ruby-debug19', :require => 'ruby-debug'
-
